crates/adapters/btc-secp-sys/depend/secp256k1/include/secp256k1_musig.h


typedef struct {
    unsigned char data[132];
} dominterop_secp_v0_10_0_musig_pubnonce;
typedef struct {
    unsigned char data[132];
} dominterop_secp_v0_10_0_musig_aggnonce;
typedef struct {
    unsigned char data[36];
} dominterop_secp_v0_10_0_musig_partial_sig;
SECP256K1_API int dominterop_secp_v0_10_0_musig_pubnonce_parse(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_musig_pubnonce *nonce,
    const unsigned char *in66
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int dominterop_secp_v0_10_0_musig_pubnonce_serialize(
    const dominterop_secp_v0_10_0_context *ctx,
    unsigned char *out66,
    const dominterop_secp_v0_10_0_musig_pubnonce *nonce
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int dominterop_secp_v0_10_0_musig_aggnonce_parse(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_musig_aggnonce *nonce,
    const unsigned char *in66
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int dominterop_secp_v0_10_0_musig_aggnonce_serialize(
    const dominterop_secp_v0_10_0_context *ctx,
    unsigned char *out66,
    const dominterop_secp_v0_10_0_musig_aggnonce *nonce
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int dominterop_secp_v0_10_0_musig_partial_sig_serialize(
    const dominterop_secp_v0_10_0_context *ctx,
    unsigned char *out32,
    const dominterop_secp_v0_10_0_musig_partial_sig *sig
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int dominterop_secp_v0_10_0_musig_partial_sig_parse(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_musig_partial_sig *sig,
    const unsigned char *in32
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);