crates/adapters/btc-secp-sys/depend/secp256k1/include/secp256k1.h


typedef struct dominterop_secp_v0_10_0_context_struct dominterop_secp_v0_10_0_context;
typedef struct {
    unsigned char data[64];
} dominterop_secp_v0_10_0_pubkey;
#define SECP256K1_CONTEXT_NONE (SECP256K1_FLAGS_TYPE_CONTEXT)
#define SECP256K1_CONTEXT_VERIFY (SECP256K1_FLAGS_TYPE_CONTEXT | SECP256K1_FLAGS_BIT_CONTEXT_VERIFY)
#define SECP256K1_CONTEXT_SIGN (SECP256K1_FLAGS_TYPE_CONTEXT | SECP256K1_FLAGS_BIT_CONTEXT_SIGN)
#define SECP256K1_EC_COMPRESSED (SECP256K1_FLAGS_TYPE_COMPRESSION | SECP256K1_FLAGS_BIT_COMPRESSION)
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_ec_pubkey_parse(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_pubkey *pubkey,
    const unsigned char *input,
    size_t inputlen
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int dominterop_secp_v0_10_0_ec_pubkey_serialize(
    const dominterop_secp_v0_10_0_context *ctx,
    unsigned char *output,
    size_t *outputlen,
    const dominterop_secp_v0_10_0_pubkey *pubkey,
    unsigned int flags
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_ec_seckey_verify(
    const dominterop_secp_v0_10_0_context *ctx,
    const unsigned char *seckey
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_ec_pubkey_create(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_pubkey *pubkey,
    const unsigned char *seckey
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_context_randomize(
    dominterop_secp_v0_10_0_context *ctx,
    const unsigned char *seed32
) SECP256K1_ARG_NONNULL(1);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_tagged_sha256(
    const dominterop_secp_v0_10_0_context *ctx,
    unsigned char *hash32,
    const unsigned char *tag,
    size_t taglen,
    const unsigned char *msg,
    size_t msglen
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(5);