crates/adapters/btc-secp-sys/depend/secp256k1/include/secp256k1_extrakeys.h


typedef struct {
    unsigned char data[64];
} dominterop_secp_v0_10_0_xonly_pubkey;
typedef struct {
    unsigned char data[96];
} dominterop_secp_v0_10_0_keypair;
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_xonly_pubkey_parse(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_xonly_pubkey *pubkey,
    const unsigned char *input32
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int dominterop_secp_v0_10_0_xonly_pubkey_serialize(
    const dominterop_secp_v0_10_0_context *ctx,
    unsigned char *output32,
    const dominterop_secp_v0_10_0_xonly_pubkey *pubkey
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_xonly_pubkey_from_pubkey(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_xonly_pubkey *xonly_pubkey,
    int *pk_parity,
    const dominterop_secp_v0_10_0_pubkey *pubkey
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(4);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_keypair_create(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_keypair *keypair,
    const unsigned char *seckey
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_keypair_pub(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_pubkey *pubkey,
    const dominterop_secp_v0_10_0_keypair *keypair
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);